# rice-seedling-phenotype-quantifier

./: .gitignore  README.md  build_windows.bat  main.py  pyproject.toml  requirements.txt
docs/: function_checklist.md  software_manual.md  test_checklist.md
examples/: README.md
src/rice_phenotype/: __init__.py  app.py
src/rice_phenotype/core/: batch.py  calibration.py  metrics.py  segmentation.py  settings.py  statistics.py
src/rice_phenotype/export/: excel_exporter.py
src/rice_phenotype/storage/: database.py
src/rice_phenotype/ui/: main_window.py  page_batch_analysis.py  page_home.py  page_records.py  page_settings.py  page_single_analysis.py
src/rice_phenotype/ui/dialogs/: record_review_dialog.py  sample_review_dialog.py
src/rice_phenotype/ui/widgets/: charts.py
src/rice_phenotype/utils/: image_qt.py  paths.py
