[project]
name = "rice-seedling-phenotype-quantifier"
version = "1.0.0"
description = "A Windows desktop tool for rice seedling image-based phenotype quantification."
requires-python = ">=3.10"
authors = [
    { name = "Rice Phenotype Quantifier Team" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]